# swiftgaurd-ai-agent

project/: config.py  main.py  pyproject.toml
project/agents/: orchestrator_worker.py  parallelization.py  prompt_chaining.py
project/agents/workflow_agents/: base_agents.py
project/services/: llm_service.py
src/agents/: parallelization.py
src/agents/workflow_agents/: base_agents.py
