[project]
name = "swift-workflow"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faker>=37.5.3",
    "numpy>=2.3.2",
    "openai>=1.99.5",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.0.0",
    "scipy>=1.16.1",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "models*", "services*"]

[tool.setuptools]
py-modules = ["config", "main", "generate_swift_messages"]
